# viola-jones

./: .gitignore  CMakeLists.txt  LICENSE  README.md  basic_bitmap.h  bitmap.cpp  bitmap.h  haar_feature.cpp  haar_feature.h  integral_image.cpp  integral_image.h  rect.cpp  rect.h  weak_classifier.cpp  weak_classifier.h
test/: benchmarks.cpp  readme.md  test_vj_mcg.cpp
util/: generate_weak_classifiers.h
